--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <title>EXPLICIT - Explorers in Communication and Information Technology</title>
   <meta name="description" content="Official academic organization of BSIT students at PUP San Pedro Campus. Join us for tech workshops and networking.">
   <!-- Favicon -->
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <!-- Font Awesome for social icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
@@ -542,7 +545,7 @@
   </header>
 
   <!-- HERO SECTION -->
-  <section class="hero">
+  <section class="hero" style="background: url('images/hero-bg.jpg') center/cover no-repeat;">
     <div class="hero-content">
       <h1>Explorers in <span>Communication</span> and Information Technology</h1>
       <p class="tagline">Connecting students, sharing knowledge, and pushing technological boundaries together</p>
@@ -554,32 +557,37 @@
   </section>
 
   <!-- WHAT WE OFFER SECTION -->
-  <section class="section light-section">
-    <h2 class="section-title">What We Offer</h2>
-    <div class="features">
-      <div class="feature-box">
-        <div class="feature-img"></div>
-        <div class="feature-content">
-          <h3 class="feature-title">Workshops & Training</h3>
-          <p>Regular skill-building sessions on the latest technologies and communication strategies, led by experts and peers.</p>
-        </div>
-      </div>
-      <div class="feature-box">
-        <div class="feature-img"></div>
-        <div class="feature-content">
-          <h3 class="feature-title">Networking Events</h3>
-          <p>Connect with fellow students, faculty, and industry professionals to build your personal and professional network.</p>
-        </div>
-      </div>
-      <div class="feature-box">
-        <div class="feature-img"></div>
-        <div class="feature-content">
-          <h3 class="feature-title">Collaborative Projects</h3>
-          <p>Work on real-world tech and communication projects to build your portfolio and gain practical experience.</p>
-        </div>
+<section class="section light-section">
+  <h2 class="section-title">What We Offer</h2>
+  <div class="features">
+    <!-- Excellence -->
+    <div class="feature-box">
+      <div class="feature-img" style="background: url('images/excellence-bg.jpg') center/cover;"></div>
+      <div class="feature-content">
+        <h3 class="feature-title">Excellence in All Aspects</h3>
+        <p>We cultivate a culture of high standards in academics, projects, and professional development. Our workshops and mentorship programs ensure members achieve their full potential.</p>
       </div>
     </div>
-  </section>
+
+    <!-- Community -->
+    <div class="feature-box">
+      <div class="feature-img" style="background: url('images/community-bg.jpg') center/cover;"></div>
+      <div class="feature-content">
+        <h3 class="feature-title">A Collective of Aspiring IT Students</h3>
+        <p>Join a vibrant network of like-minded individuals passionate about technology. Collaborate, share ideas, and grow together in a supportive environment.</p>
+      </div>
+    </div>
+
+    <!-- Programs -->
+    <div class="feature-box">
+      <div class="feature-img" style="background: url('images/programs-bg.jpg') center/cover;"></div>
+      <div class="feature-content">
+        <h3 class="feature-title">Programs to Enforce Learning and Coordination</h3>
+        <p>From hackathons to industry talks, our structured programs bridge classroom knowledge with real-world applications while fostering teamwork.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- ABOUT US SECTION -->
   <section class="section dark-section" id="about">
