--- a/index.html
+++ b/index.html
@@ -519,6 +519,19 @@
       
       .fb-page {
         width: 100% !important;
+		
+		.about-text h3 {
+  color: var(--primary-blue);
+  margin: 1.5rem 0 0.8rem;
+  font-size: 1.3rem;
+}
+.about-text ul {
+  padding-left: 1.5rem;
+  margin: 0.5rem 0;
+}
+.about-text li {
+  margin-bottom: 0.4rem;
+}
       }
     }
   </style>
@@ -590,21 +603,51 @@
 </section>
 
   <!-- ABOUT US SECTION -->
-  <section class="section dark-section" id="about">
-    <h2 class="section-title">About EXPLICIT</h2>
-    <div class="about-content">
-      <div class="about-text">
-        <p>The Explorers in Communication and Information Technology (EXPLICIT) is the official academic organization of Bachelor of Science in Information Technology (BSIT) students of the Polytechnic University of the Philippines - San Pedro Campus</p>
-        <br>
-        <div class="social-links">
-          <a href="https://www.facebook.com/explicitpupspc" class="social-link"><i class="fab fa-facebook-f"></i></a>
-        </div>
-      </div>
-      <div class="about-img">
-        <!-- About section image -->
+<section class="section dark-section" id="about">
+  <h2 class="section-title">About EXPLICIT</h2>
+  <div class="about-content">
+    <div class="about-text">
+      <h3>Our Legacy</h3>
+      <p>Founded in 2006 as <strong>SPECS</strong> (Students Proficient in Electronics and Communication System), we transitioned to <strong>EXPLICIT</strong> in 2010, marking a new era of technological exploration.</p>
+      
+      <h3>Our Logo</h3>
+      <p>The EXPLICIT logo embodies our identity through:
+        <ul>
+          <li>Symbols of the BSIT program's founding year</li>
+          <li>Logic gates - the building blocks of digital circuits</li>
+          <li>Representations of programming languages</li>
+          <li>Computer hardware elements</li>
+        </ul>
+      </p>
+
+      <h3>Academic & Beyond</h3>
+      <p>We go beyond classrooms with:
+        <ul>
+          <li><strong>Annual Events:</strong> General Assembly, IT Week, Technical Seminars</li>
+          <li><strong>School Initiatives:</strong> Quest for Excellence (Q4E), Fun Day, Christmas Gift Giving</li>
+          <li><strong>Lab Maintenance:</strong> Exclusive hands-on opportunities for IT students to service hardware/software</li>
+        </ul>
+      </p>
+
+      <h3>University Competitions</h3>
+      <p>We proudly represent PUP-SPC in inter-school contests:
+        <ul>
+          <li>Programming Hackathons</li>
+          <li>Web/Mobile App Development</li>
+          <li>IT Quiz Bees</li>
+          <li>Digital Design Challenges</li>
+        </ul>
+      </p>
+
+      <div class="social-links">
+        <a href="https://www.facebook.com/explicitpupspc" class="social-link"><i class="fab fa-facebook-f"></i></a>
       </div>
     </div>
-  </section>
+    <div class="about-img" style="background: url('images/about-history.jpg') center/cover;">
+      <!-- Historical photo or logo evolution -->
+    </div>
+  </div>
+</section>
 
   <!-- EVENTS SECTION (Facebook Embedded) -->
   <section class="section light-section" id="events">
