--- a/index.html
+++ b/index.html
@@ -770,45 +770,45 @@
 
     <!-- EVENTS SECTION -->
 <section class="section light-section" id="events">
-  <h2 class="section-title">Upcoming Events</h2>
+  <h2 class="section-title">Events</h2>
   <div class="events-gallery">
     <!-- Event 1 -->
-    <a href="https://www.facebook.com/explicitpupspc/posts/event1" class="event-item" style="background-image: url('images/events/event1.jpg');" aria-label="Tech Innovation Summit event">
+    <a href="https://www.facebook.com/photo/?fbid=635793625839637&set=a.139447742140897" class="event-item" style="background-image: url('images/events/event1.jpg');" aria-label="Tech Innovation Summit event">
       <div class="event-item-content">
-        <div class="event-item-date">September 15, 2024</div>
-        <h3 class="event-item-title">Tech Innovation Summit</h3>
+        <div class="event-item-date">March 14, 2025</div>
+        <h3 class="event-item-title">Mastering Modern Web Development Frameworks</h3>
       </div>
     </a>
     
     <!-- Event 2 -->
     <a href="https://www.facebook.com/explicitpupspc/posts/event2" class="event-item" style="background-image: url('images/events/event2.jpg');" aria-label="Code Marathon event">
       <div class="event-item-content">
-        <div class="event-item-date">October 5-6, 2024</div>
-        <h3 class="event-item-title">Code Marathon 2024</h3>
+        <div class="event-item-date">March 8, 2025</div>
+        <h3 class="event-item-title">Bringing Ideas To Life: Character Design Essentials</h3>
       </div>
     </a>
     
     <!-- Event 3 -->
-    <a href="https://www.facebook.com/explicitpupspc/posts/event3" class="event-item" style="background-image: url('images/events/event3.jpg');" aria-label="Career Preparation Workshop">
+    <a href="https://www.facebook.com/photo/?fbid=621837863901880&set=a.139447742140897" class="event-item" style="background-image: url('images/events/event3.jpg');" aria-label="Career Preparation Workshop">
       <div class="event-item-content">
-        <div class="event-item-date">November 20, 2024</div>
-        <h3 class="event-item-title">Career Preparation Workshop</h3>
+        <div class="event-item-date">February 23, 2025</div>
+        <h3 class="event-item-title">Lead The Future: Cultivating The Next Wave Of IT Leaders</h3>
       </div>
     </a>
 
     <!-- NEW Event 4 -->
-    <a href="https://www.facebook.com/explicitpupspc/posts/event4" class="event-item" style="background-image: url('images/events/event4.jpg');" aria-label="Alumni Networking Night">
+    <a href="https://www.facebook.com/photo/?fbid=609899288429071&set=pcb.609900408428959" class="event-item" style="background-image: url('images/events/event4.jpg');" aria-label="Alumni Networking Night">
       <div class="event-item-content">
-        <div class="event-item-date">December 8, 2024</div>
-        <h3 class="event-item-title">Alumni Networking Night</h3>
+        <div class="event-item-date">February 7, 2025</div>
+        <h3 class="event-item-title">Celebrating Love Through Art</h3>
       </div>
     </a>
 
     <!-- NEW Event 5 -->
-    <a href="https://www.facebook.com/explicitpupspc/posts/event5" class="event-item" style="background-image: url('images/events/event5.jpg');" aria-label="New Year Hackathon">
+    <a href="https://www.facebook.com/photo/?fbid=606081665477500&set=a.139447742140897" class="event-item" style="background-image: url('images/events/event5.jpg');" aria-label="New Year Hackathon">
       <div class="event-item-content">
-        <div class="event-item-date">January 15-16, 2025</div>
-        <h3 class="event-item-title">New Year Hackathon</h3>
+        <div class="event-item-date">February 1, 2025</div>
+        <h3 class="event-item-title">ProTech: Forging Digital Resilience in Networking & IT Security</h3>
       </div>
     </a>
   </div>
