--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
     </a>
     
     <!-- Event 2 -->
-    <a href="https://www.facebook.com/explicitpupspc/posts/event2" class="event-item" style="background-image: url('images/events/event2.jpg');" aria-label="Code Marathon event">
+    <a href="https://www.facebook.com/photo/?fbid=630391456379854&set=a.139447742140897" class="event-item" style="background-image: url('images/events/event2.jpg');" aria-label="Code Marathon event">
       <div class="event-item-content">
         <div class="event-item-date">March 8, 2025</div>
         <h3 class="event-item-title">Bringing Ideas To Life: Character Design Essentials</h3>
