--- a/index.html
+++ b/index.html
@@ -818,23 +818,23 @@
     <section class="section dark-section" id="gallery">
       <h2 class="section-title">Our Gallery</h2>
       <div class="gallery">
-        <div class="gallery-item" style="background-image: url('images/gallery/gallery1.jpg');" aria-label="2023 IT Week">
-          <h3 class="gallery-item-title">2023 IT Week</h3>
+        <div class="gallery-item" style="background-image: url('images/gallery/gallery1.jpg');" aria-label="">
+          <h3 class="gallery-item-title"></h3>
         </div>
-        <div class="gallery-item" style="background-image: url('images/gallery/gallery2.jpg');" aria-label="Lab Maintenance activity">
-          <h3 class="gallery-item-title">Lab Maintenance</h3>
+        <div class="gallery-item" style="background-image: url('images/gallery/gallery2.jpg');" aria-label="">
+          <h3 class="gallery-item-title"></h3>
         </div>
-        <div class="gallery-item" style="background-image: url('images/gallery/gallery3.jpg');" aria-label="Hackathon Winners">
-          <h3 class="gallery-item-title">Hackathon Winners</h3>
+        <div class="gallery-item" style="background-image: url('images/gallery/gallery3.jpg');" aria-label="">
+          <h3 class="gallery-item-title"></h3>
         </div>
-        <div class="gallery-item" style="background-image: url('images/gallery/gallery4.jpg');" aria-label="Guest Lectures">
-          <h3 class="gallery-item-title">Guest Lectures</h3>
+        <div class="gallery-item" style="background-image: url('images/gallery/gallery4.jpg');" aria-label="">
+          <h3 class="gallery-item-title"></h3>
         </div>
-        <div class="gallery-item" style="background-image: url('images/gallery/gallery5.jpg');" aria-label="Team Building activity">
-          <h3 class="gallery-item-title">Team Building</h3>
+        <div class="gallery-item" style="background-image: url('images/gallery/gallery5.jpg');" aria-label="">
+          <h3 class="gallery-item-title"></h3>
         </div>
-        <div class="gallery-item" style="background-image: url('images/gallery/gallery6.jpg');" aria-label="Campus Events">
-          <h3 class="gallery-item-title">Campus Events</h3>
+        <div class="gallery-item" style="background-image: url('images/gallery/gallery6.jpg');" aria-label="">
+          <h3 class="gallery-item-title"></h3>
         </div>
       </div>
     </section>
